OpenBST : Fix all font scaling related issues + Fixed Save as icon
java 9 compatibility just got realistic!